# cli

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .goreleaser.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  SECURITY.md  dev.md  docker-compose.yml  go.mod  go.sum  nfpm-amd64.yaml  nfpm-arm64.yaml  pyproject.toml
.ai/: README.md
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.loop/: README.md  hooks.yaml  policy.yaml  project.yaml
Example/: README.md  index.md
api/: auth_header_test.go  client.go  client_test.go  flexible.go  flexible_test.go  http_client.go  http_client_test.go  issue_assignee_test.go  issue_label_test.go  queries_actions.go  queries_actions_test.go  queries_commit.go  queries_commit_test.go  queries_coverage_test.go  queries_issue.go  queries_issue_test.go  queries_label_milestone.go  queries_label_test.go  queries_pr.go  queries_pr_test.go  queries_release.go  queries_release_test.go  queries_repo.go  queries_repo_test.go  queries_user.go  retry.go  retry_test.go  time.go  time_test.go
completions/: gc.zsh
docs/: AI-GUIDE.md  AI-TEMPLATES.md  AUTH.md  COMMANDS.md  HOOKS.md  INTRODUCTION.md  LOOP-GOAL-GUIDE.md  LOOP_ENGINEERING.md  LOOP_ENGINEERING_ARCHITECTURE.md  LOOP_ENGINEERING_DEMO.md  LOOP_ENGINEERING_MAINLINE_ANALYSIS.md  MIRROR_CI.md  PACKAGING.md  README.md  REGRESSION.md
gc_cli/: __init__.py  __main__.py  wrapper.py
git/: git.go  git_test.go  repo.go
homebrew/: gc.rb
(+591 files in other folders)
