[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitcode-cli"
version = "0.2.11"
description = "GitCode CLI - Command line tool for GitCode"
readme = "README.md"
license = "MIT"
authors = [
    {name = "GitCode CLI Contributors", email = "support@gitcode.com"}
]
maintainers = [
    {name = "GitCode CLI Contributors", email = "support@gitcode.com"}
]
keywords = ["gitcode", "cli", "git", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

[project.scripts]
gc = "gc_cli.wrapper:main"

[project.urls]
Homepage = "https://gitcode.com/gitcode-cli/cli"
Documentation = "https://gitcode.com/gitcode-cli/cli"
Repository = "https://gitcode.com/gitcode-cli/cli"
Issues = "https://gitcode.com/gitcode-cli/cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gc_cli*"]

[tool.setuptools.package-data]
gc_cli = ["bin/*"]